--- a/Backend/07-23/node-routing-app/views/article/modify.ejs
+++ b/Backend/07-23/node-routing-app/views/article/modify.ejs
@@ -7,7 +7,14 @@
   </head>
   <body>
     <h1>게시글 확인 및 수정/삭제 웹페이지</h1>
-    <form method="post" action="/article/modify" onSubmit="return checkForm();">
+    <!-- 수정 버튼을 클릭하면 수정 폼태그 내 수정데이터가 action 요소의 지정된 URL 주소인 /article/modify 주소로
+    method=post 방식으로 서버로 전송됩니다. 그러면 서버에서는 해당 주소 라우팅 메서드와 클라이언트 요청 방식인 POST 방식으로 맵핑되는
+    라우팅 메서드가 구현되어 있어야 정보처리가 가능합니다. -->
+    <form
+      method="post"
+      action="/article/modify/<%=article.article_id%>"
+      onSubmit="return checkForm();"
+    >
       제목:
       <input
         type="text"
@@ -27,8 +34,11 @@
       </select>
       <br />
       <input type="submit" value="수정" />
-      <input type="button" value="삭제" />
-      <input type="button" value="목록" />
+      <input type="button" value="삭제" onClick="fnDelete();" />
+      <input type="button" value="목록" onClick="fnMoveList();" />
+    </form>
+    <form method="post" action="/article/delete" id="deleteForm">
+      <input type="hidden" name="article_id" value="<%=article.article_id%>" />
     </form>
     <script>
       // 클라이언트 폼 유효성 검사 함수 기능 정의
@@ -41,6 +51,19 @@
         }
         // 서버로 폼데이터 전송
         return true;
+      }
+
+      // 삭제 버튼 클릭시 최종 삭제 여부 확인 메시지 출력 후 삭제 처리 주소 호출하기
+      function fnDelete() {
+        if (confirm("정말 삭제하시겠습니까?")) {
+          //location.href= "/article/delete?id=<%=article.article_id%>";
+          document.getElementById("deleteForm").submit();
+        }
+      }
+
+      // 게시글 목록페이지로 클라이언트에서 바로 이동시키기
+      function fnMoveList() {
+        location.href = "/article/list";
       }
     </script>
   </body>
