--- a/Backend/final/node-admin-app/views/login.ejs
+++ b/Backend/final/node-admin-app/views/login.ejs
@@ -12,5 +12,11 @@
       암호: <input type="password" name="password" /> <br />
       <input type="submit" value="로그인" />
     </form>
+    <script>
+      const loginResult = "<%=resultMsg%>";
+      if (loginResult.length > 0) {
+        alert("로그인 실패");
+      }
+    </script>
   </body>
 </html>
