--- a/Backend/final/node-admin-app/views/admin/modify.ejs
+++ b/Backend/final/node-admin-app/views/admin/modify.ejs
@@ -6,7 +6,7 @@
       <li><a href="/Home/Index">Home</a>></li>
       <li><a>관리자정보관리</a>></li>
       <li class="active">
-        <strong>신규관리자계정등록</strong>
+        <strong>기존관리자계정수정</strong>
       </li>
     </ol>
   </div>
@@ -98,8 +98,8 @@
     </div>
 
     <div class="text-center">
-      <button type="submit" class="btn btn-primary">저장</button>
-      <a href="/admin/list" class="btn btn-info">목록</a>
+      <button type="button" class="btn btn-primary">저장</button>
+      <a href="#" class="btn btn-info">목록</a>
     </div>
   </div>
 </div>
