--- a/Backend/final/node-admin-app/views/layout.ejs
+++ b/Backend/final/node-admin-app/views/layout.ejs
@@ -3,18 +3,23 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <%-meta%>
 
-    <title>메인 홈페이지</title>
+    <title>INSPINIA | Main view</title>
 
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/font-awesome/css/font-awesome.css" rel="stylesheet" />
 
-    <link href="css/animate.css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="/css/animate.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
+
+    <!--추가 스타일-->
+    <%-style%>
   </head>
 
   <body>
     <div id="wrapper">
+      <!--좌측 메뉴 영역-->
       <nav class="navbar-default navbar-static-side" role="navigation">
         <div class="sidebar-collapse">
           <ul class="nav metismenu" id="side-menu">
@@ -30,25 +35,39 @@
                   <li><a class="dropdown-item" href="login.html">Logout</a></li>
                 </ul>
               </div>
-              <div class="logo-element">CBNU+</div>
+              <div class="logo-element">IN+</div>
             </li>
             <li class="active">
-              <a href="index.html"
+              <a href="login.html"
                 ><i class="fa fa-th-large"></i>
-                <span class="nav-label">Main view</span></a
+                <span class="nav-label">로그인</span></a
               >
             </li>
             <li>
-              <a href="minor.html"
+              <a href="entry.html"
                 ><i class="fa fa-th-large"></i>
-                <span class="nav-label">Minor view</span>
+                <span class="nav-label">회원가입</span>
+              </a>
+            </li>
+            <li>
+              <a href="/front/list.html"
+                ><i class="fa fa-th-large"></i>
+                <span class="nav-label">게시글목록</span>
+              </a>
+            </li>
+            <li>
+              <a href="write.html"
+                ><i class="fa fa-th-large"></i>
+                <span class="nav-label">게시글작성</span>
               </a>
             </li>
           </ul>
         </div>
       </nav>
 
+      <!--우측 영역-->
       <div id="page-wrapper" class="gray-bg">
+        <!--우측 상단 영역 -->
         <div class="row border-bottom">
           <nav
             class="navbar navbar-static-top white-bg"
@@ -85,20 +104,11 @@
             </ul>
           </nav>
         </div>
-        <div class="wrapper wrapper-content animated fadeInRight">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="text-center m-t-lg">
-                <h1>INSPINIA Static Seed Project for BS4</h1>
-                <small>
-                  It is an application skeleton for a typical web app. You can
-                  use it to quickly bootstrap your webapp projects and dev
-                  environment for these projects.
-                </small>
-              </div>
-            </div>
-          </div>
-        </div>
+
+        <!-- 실제 콘텐츠 웹페이지 영역이 통합되는 영역 -->
+        <%-body%>
+
+        <!--우측 하단 풋터 영역-->
         <div class="footer">
           <div class="pull-right">10GB of <strong>250GB</strong> Free.</div>
           <div><strong>Copyright</strong> Example Company &copy; 2014-2018</div>
@@ -107,14 +117,21 @@
     </div>
 
     <!-- Mainly scripts -->
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="/js/jquery-3.1.1.min.js"></script>
+    <script src="/js/popper.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/plugins/metisMenu/jquery.metisMenu.js"></script>
+    <script src="/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 
     <!-- Custom and plugin javascript -->
-    <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <script src="/js/inspinia.js"></script>
+    <script src="/js/plugins/pace/pace.min.js"></script>
+
+    <!--추가 스크립트-->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <%-script%>
+
+    <script></script>
   </body>
 </html>
