--- a/Backend/final/node-admin-app/views/member/list.ejs
+++ b/Backend/final/node-admin-app/views/member/list.ejs
@@ -1,10 +1,10 @@
 <!--우측 상단 헤더 영역 -->
 <div class="row wrapper border-bottom white-bg page-heading">
   <div class="col-lg-10">
-    <h2>관리자정보관리</h2>
+    <h2>사용자 계정 관리</h2>
     <ol class="breadcrumb">
       <li><a href="/Home/Index">Home</a>></li>
-      <li><a>관리자정보관리</a>></li>
+      <li><a>사용자계정관리</a>></li>
       <li class="active">
         <strong>조회</strong>
       </li>
@@ -38,7 +38,7 @@
     </div>
     <div class="text-center">
       <button type="button" class="btn btn-primary">조회</button>
-      <a href="/admin/create" class="btn btn-info">신규</a>
+      <a href="/member/create" class="btn btn-info">신규</a>
     </div>
   </div>
 
