--- a/Backend/final/node-admin-app/views/admin/list.ejs
+++ b/Backend/final/node-admin-app/views/admin/list.ejs
@@ -61,68 +61,8 @@
               </thead>
               <tbody class="hoverTblBody">
                 <tr>
-                  <td><a href="#">code.AdminID</a></td>
-                  <td><a href="#">code.AdminName</a></td>
-                  <td>code.AdminEmail</td>
-                  <td>code.Company</td>
-                  <td>code.CompanyPosition</td>
-                  <td>code.UseYN</td>
-                  <td>Date</td>
-                </tr>
-
-                <tr>
-                  <td><a href="#">code.AdminID</a></td>
-                  <td><a href="#">code.AdminName</a></td>
-                  <td>code.AdminEmail</td>
-                  <td>code.Company</td>
-                  <td>code.CompanyPosition</td>
-                  <td>code.UseYN</td>
-                  <td>Date</td>
-                </tr>
-
-                <tr>
-                  <td><a href="#">code.AdminID</a></td>
-                  <td><a href="#">code.AdminName</a></td>
-                  <td>code.AdminEmail</td>
-                  <td>code.Company</td>
-                  <td>code.CompanyPosition</td>
-                  <td>code.UseYN</td>
-                  <td>Date</td>
-                </tr>
-
-                <tr>
-                  <td><a href="#">code.AdminID</a></td>
-                  <td><a href="#">code.AdminName</a></td>
-                  <td>code.AdminEmail</td>
-                  <td>code.Company</td>
-                  <td>code.CompanyPosition</td>
-                  <td>code.UseYN</td>
-                  <td>Date</td>
-                </tr>
-
-                <tr>
-                  <td><a href="#">code.AdminID</a></td>
-                  <td><a href="#">code.AdminName</a></td>
-                  <td>code.AdminEmail</td>
-                  <td>code.Company</td>
-                  <td>code.CompanyPosition</td>
-                  <td>code.UseYN</td>
-                  <td>Date</td>
-                </tr>
-
-                <tr>
-                  <td><a href="#">code.AdminID</a></td>
-                  <td><a href="#">code.AdminName</a></td>
-                  <td>code.AdminEmail</td>
-                  <td>code.Company</td>
-                  <td>code.CompanyPosition</td>
-                  <td>code.UseYN</td>
-                  <td>Date</td>
-                </tr>
-
-                <tr>
-                  <td><a href="#">code.AdminID</a></td>
-                  <td><a href="#">code.AdminName</a></td>
+                  <td><a href="/admin/modify/1">code.AdminID</a></td>
+                  <td>code.AdminName</a></td>
                   <td>code.AdminEmail</td>
                   <td>code.Company</td>
                   <td>code.CompanyPosition</td>
