--- a/Backend/final/node-admin-app/views/admin/create.ejs
+++ b/Backend/final/node-admin-app/views/admin/create.ejs
@@ -15,91 +15,35 @@
 
 <!--우측 콘텐츠 영역 -->
 <div class="wrapper wrapper-content">
-  <div class="ibox-content m-b-sm border-bottom">
-    <div class="row">
-      <div class="col-sm-4">
-        <div class="form-group">
-          <label class="control-label">아이디</label>
-          <input type="text" class="form-control" />
+  <form method="post" action="/admin/create">
+    <div class="ibox-content m-b-sm border-bottom">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="form-group">
+            <label class="control-label">관리자아이디</label>
+            <input type="text" name="id" class="form-control" value="" />
+          </div>
         </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="form-group">
-          <label class="control-label">암호</label>
-          <input type="text" class="form-control" />
+
+        <div class="col-sm-4">
+          <div class="form-group">
+            <label class="control-label">관리자암호</label>
+            <input type="text" name="pw" class="form-control" value="" />
+          </div>
+        </div>
+
+        <div class="col-sm-4">
+          <div class="form-group">
+            <label class="control-label">소속회사코드</label>
+            <input type="text" name="code" class="form-control" value="" />
+          </div>
         </div>
       </div>
 
-      <div class="col-sm-4">
-        <div class="form-group">
-          <label class="control-label">성명</label>
-          <input type="text" class="form-control" />
-        </div>
+      <div class="text-center">
+        <button type="submit" class="btn btn-primary">저장</button>
+        <a href="/admin/list" class="btn btn-info">목록</a>
       </div>
     </div>
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="form-group">
-          <label class="control-label">홈페이지주소</label>
-          <input type="text" class="form-control" />
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="form-group">
-          <label class="control-label">간략소개</label>
-          <textarea class="form-control" rows="10" cols="5"></textarea>
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-sm-4">
-        <div class="form-group">
-          <label class="control-label">메일주소</label>
-          <input type="text" class="form-control" />
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="form-group">
-          <label class="control-label">회사명</label>
-          <input type="text" class="form-control" />
-        </div>
-      </div>
-
-      <div class="col-sm-4">
-        <div class="form-group">
-          <label class="control-label">직위</label>
-          <input type="text" class="form-control" />
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-sm-4">
-        <div class="form-group">
-          <label class="control-label">수정자</label>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="form-group">
-          <label class="control-label">수정일시</label>
-        </div>
-      </div>
-
-      <div class="col-sm-4">
-        <div class="form-group">
-          <label class="control-label">사용여부</label>
-          <div class="form-group"></div>
-        </div>
-      </div>
-    </div>
-
-    <div class="text-center">
-      <button type="submit" class="btn btn-primary">저장</button>
-      <a href="/admin/list" class="btn btn-info">목록</a>
-    </div>
-  </div>
+  </form>
 </div>
