--- a/Backend/final/node-admin-app/views/article/create.ejs
+++ b/Backend/final/node-admin-app/views/article/create.ejs
@@ -15,42 +15,43 @@
 
 <!--우측 콘텐츠 영역 -->
 <div class="wrapper wrapper-content">
-  <div class="ibox-content m-b-sm border-bottom">
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="form-group">
-          <label class="control-label">글제목</label>
-          <input type="text" class="form-control" />
+  <form method="post" action="/article/create">
+    <div class="ibox-content m-b-sm border-bottom">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="form-group">
+            <label class="control-label">글제목</label>
+            <input type="text" class="form-control" />
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="form-group">
-          <label class="control-label">글내용</label>
-          <textarea class="form-control" rows="10" cols="5"></textarea>
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="form-group">
+            <label class="control-label">글내용</label>
+            <textarea class="form-control" rows="10" cols="5"></textarea>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="form-group">
-          <label class="control-label">게시여부</label
-          ><select class="form-control" id="display" name="display">
-            <option value="9">선택</option>
-            <option value="1">게시</option>
-            <option value="0">게시안함</option>
-          </select>
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="form-group">
+            <label class="control-label">게시여부</label
+            ><select class="form-control" id="display" name="display">
+              <option value="9">선택</option>
+              <option value="1">게시</option>
+              <option value="0">게시안함</option>
+            </select>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="text-center">
-      <button type="submit" class="btn btn-primary">등록</button>
-      <button type="submit" class="btn btn-danger">삭제</button>
-      <a href="/article/list" class="btn btn-info">목록</a>
+      <div class="text-center">
+        <button type="submit" class="btn btn-primary">등록</button>
+        <a href="/article/list" class="btn btn-info">목록</a>
+      </div>
     </div>
-  </div>
+  </form>
 </div>
