--- a/Backend/final/node-admin-app/views/admin/list.ejs
+++ b/Backend/final/node-admin-app/views/admin/list.ejs
@@ -3,8 +3,12 @@
   <div class="col-lg-10">
     <h2>관리자정보관리</h2>
     <ol class="breadcrumb">
-      <li><a href="/Home/Index">Home</a>></li>
-      <li><a>관리자정보관리</a>></li>
+      <li>
+        <a href="/Home/Index">Home></a>
+      </li>
+      <li>
+        <a>관리자정보관리></a>
+      </li>
       <li class="active">
         <strong>조회</strong>
       </li>
@@ -15,33 +19,45 @@
 
 <!--우측 콘텐츠 영역 -->
 <div class="wrapper wrapper-content">
-  <div class="ibox-content m-b-sm border-bottom">
-    <div class="row">
-      <div class="col-sm-4">
-        <div class="form-group">
-          <label class="control-label" for="OrderNo">관리자명</label>
-          <input type="text" class="form-control" />
+  <!-- 조회옵션 영역  -->
+  <form action="/admin/list" method="post">
+    <div class="ibox-content m-b-sm border-bottom">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="form-group">
+            <label class="control-label" for="company_code">소속회사</label>
+            <select id="company_code" name="company_code" class="form-control">
+              <option value="9">전체</option>
+              <option value="0">자회사</option>
+              <option value="1">협력사</option>
+            </select>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="form-group">
+            <label class="control-label" for="OrderName">관리자아이디</label>
+            <input type="text" name="admin_id" class="form-control" />
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="form-group">
+            <label class="control-label" for="use_yn_code">사용여부</label>
+            <select id="use_yn_code" name="use_yn_code" class="form-control">
+              <option value="9">전체</option>
+              <option value="0">사용안함</option>
+              <option value="1">사용함</option>
+            </select>
+          </div>
         </div>
       </div>
-      <div class="col-sm-4">
-        <div class="form-group">
-          <label class="control-label" for="OrderName">아이디</label>
-          <input type="text" class="form-control" />
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="form-group">
-          <label class="control-label" for="MobileNo">사용여부</label>
-          <input type="text" class="form-control" />
-        </div>
+      <div class="text-center">
+        <button type="submit" class="btn btn-primary">조회</button>
+        <a href="/admin/create" class="btn btn-info">신규계정</a>
       </div>
     </div>
-    <div class="text-center">
-      <button type="button" class="btn btn-primary">조회</button>
-      <a href="/admin/create" class="btn btn-info">신규</a>
-    </div>
-  </div>
+  </form>
 
+  <!-- 조회결과목록영역 -->
   <div class="row">
     <div class="col-lg-12">
       <div class="ibox float-e-margins">
@@ -60,15 +76,32 @@
                 </tr>
               </thead>
               <tbody class="hoverTblBody">
+                <% for(var i = 0; i < admins.length; i++){ %>
+
                 <tr>
-                  <td><a href="/admin/modify/1">code.AdminID</a></td>
-                  <td>code.AdminName</a></td>
-                  <td>code.AdminEmail</td>
-                  <td>code.Company</td>
-                  <td>code.CompanyPosition</td>
-                  <td>code.UseYN</td>
-                  <td>Date</td>
+                  <td>
+                    <a href="/admin/modify/<%=admins[i].admin_member_id%>"
+                      ><%=admins[i].admin_id%></a
+                    >
+                  </td>
+                  <td><%=admins[i].admin_name%></td>
+                  <td><%=admins[i].email%></td>
+                  <td>
+                    <% if(admins[i].company_code == 0){%> 자회사 <% }else{ %>
+                    협력사 <%}%>
+                  </td>
+
+                  <td><%=admins[i].dept_name%></td>
+                  <td>
+                    <% if(admins[i].used_yn_code == 1){%> 사용중 <% }else{ %>
+                    미사용 <%}%>
+                  </td>
+                  <td>
+                    <%=moment(admins[i].reg_date).format("YYYY-MM-DD HH:mm")%>
+                  </td>
                 </tr>
+
+                <% } %>
               </tbody>
             </table>
           </div>
