--- a/Backend/final/node-admin-app/views/layout.ejs
+++ b/Backend/final/node-admin-app/views/layout.ejs
@@ -32,33 +32,33 @@
                   ></span>
                 </a>
                 <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                  <li><a class="dropdown-item" href="login.html">Logout</a></li>
+                  <li><a class="dropdown-item" href="/logout">Logout</a></li>
                 </ul>
               </div>
               <div class="logo-element">IN+</div>
             </li>
             <li class="active">
-              <a href="login.html"
+              <a href="/admin/list"
                 ><i class="fa fa-th-large"></i>
-                <span class="nav-label">로그인</span></a
+                <span class="nav-label">관리자조회</span></a
               >
             </li>
             <li>
-              <a href="entry.html"
+              <a href="/article/list"
                 ><i class="fa fa-th-large"></i>
-                <span class="nav-label">회원가입</span>
+                <span class="nav-label">게시글조회</span>
               </a>
             </li>
             <li>
-              <a href="/front/list.html"
+              <a href="/member/list"
                 ><i class="fa fa-th-large"></i>
-                <span class="nav-label">게시글목록</span>
+                <span class="nav-label">사용자조회</span>
               </a>
             </li>
             <li>
-              <a href="write.html"
+              <a href="/channel/list"
                 ><i class="fa fa-th-large"></i>
-                <span class="nav-label">게시글작성</span>
+                <span class="nav-label">채널조회</span>
               </a>
             </li>
           </ul>
