--- a/Backend/final/node-admin-app/views/admin/modify.ejs
+++ b/Backend/final/node-admin-app/views/admin/modify.ejs
@@ -16,13 +16,20 @@
 <!--우측 콘텐츠 영역 -->
 <div class="wrapper wrapper-content">
   <form method="post" action="/admin/modify">
+    <input type="hidden" name="admin_member_id" value="<%=admin.admin_member_id%>" />
     <div class="ibox-content m-b-sm border-bottom">
       <!-- 관리자계정/암호/소속회사 UI 제공 -->
       <div class="row">
         <div class="col-sm-4">
           <div class="form-group">
             <label class="control-label">관리자아이디</label>
-            <input type="text" name="admin_id" class="form-control" />
+            <input
+              type="text"
+              name="admin_id"
+              readonly
+              value="<%=admin.admin_id%>"
+              class="form-control"
+            />
           </div>
         </div>
 
@@ -36,10 +43,14 @@
         <div class="col-sm-4">
           <div class="form-group">
             <label class="control-label">소속회사코드</label>
-            <select id="company_code" name="company_code" class="form-control">
-              <option value="9">선택</option>
-              <option value="0">자회사</option>
-              <option value="1">협력사</option>
+            <select
+              id="company_code"
+              name="company_code"
+              class="form-control"
+            >
+              <option value="9" <% if(admin.company_code == "9") { %> selected <% } %>>선택</option>
+              <option value="0" <% if(admin.company_code == "0") { %> selected <% } %>>자회사</option>
+              <option value="1" <% if(admin.company_code == "1") { %> selected <% } %>>협력사</option>
             </select>
           </div>
         </div>
@@ -50,21 +61,36 @@
         <div class="col-sm-4">
           <div class="form-group">
             <label class="control-label">부서명</label>
-            <input type="text" name="dept_name" class="form-control" />
+            <input
+              type="text"
+              name="dept_name"
+              value="<%=admin.dept_name%>"
+              class="form-control"
+            />
           </div>
         </div>
 
         <div class="col-sm-4">
           <div class="form-group">
             <label class="control-label">이름</label>
-            <input type="text" name="admin_name" class="form-control" />
+            <input
+              type="text"
+              name="admin_name"
+              value="<%=admin.admin_name%>"
+              class="form-control"
+            />
           </div>
         </div>
 
         <div class="col-sm-4">
           <div class="form-group">
             <label class="control-label">메일주소</label>
-            <input type="text" name="email" class="form-control" />
+            <input
+              type="text"
+              name="email"
+              value="<%=admin.email%>"
+              class="form-control"
+            />
           </div>
         </div>
       </div>
@@ -74,7 +100,7 @@
         <div class="col-sm-6">
           <div class="form-group">
             <label class="control-label">전화번호</label>
-            <input type="text" name="telephone" class="form-control" />
+            <input type="text" name="telephone" value="<%=admin.telephone%>" class="form-control" />
           </div>
         </div>
 
@@ -82,9 +108,9 @@
           <div class="form-group">
             <label class="control-label">사용여부</label>
             <select id="use_yn_code" name="use_yn_code" class="form-control">
-              <option value="9">선택</option>
-              <option value="0">사용안함</option>
-              <option value="1">사용함</option>
+              <option value="9" <% if(admin.used_yn_code == "9") { %> selected <% } %>>선택</option>
+              <option value="0" <% if(admin.used_yn_code == "0") { %> selected <% } %>>사용안함</option>
+              <option value="1" <% if(admin.used_yn_code == "1") { %> selected <% } %>>사용함</option>
             </select>
           </div>
         </div>
@@ -93,9 +119,17 @@
       <!-- 버튼/목록 버튼 영역 -->
       <div class="text-center">
         <button type="submit" class="btn btn-primary">수정</button>
-        <button type="button" class="btn btn-danger">삭제</button>
+        <button type="button" id="btnDelete" class="btn btn-danger">삭제</button>
         <a href="/admin/list" class="btn btn-info">목록</a>
       </div>
     </div>
   </form>
 </div>
+
+<script>
+$("#btnDelete").click(function(){
+  if(confirm("정말 삭제하시겠습니까?")) {
+    location.href = "/admin/delete?id=<%=admin.admin_member_id%>"
+  }
+});
+</script>
