--- a/Backend/final/node-admin-app/views/login.ejs
+++ b/Backend/final/node-admin-app/views/login.ejs
@@ -16,20 +16,14 @@
   <body class="gray-bg">
     <div class="middle-box text-center loginscreen animated fadeInDown">
       <div>
-        <div>
-          <h1 class="logo-name">CBNU+</h1>
-        </div>
-        <h3>Welcome to CBNU+</h3>
-        <p>
-          Perfectly designed and precisely prepared admin theme with over 50
-          pages with extra new web app views.
-          <!--Continually expanded and constantly improved Inspinia Admin Them (IN+)-->
-        </p>
-        <p>로그인하세요.</p>
-        <form class="m-t" role="form" action="index.html">
+        <h3>관리자 웹사이트에 오신 것을 환영합니다.</h3>
+        <p>관리자 계정과 암호를 입력해주세요.</p>
+        <p>Login in. To see it in action.</p>
+        <form class="m-t" role="form" action="/login" method="post">
           <div class="form-group">
             <input
-              type="email"
+              type="text"
+              name="admin_id"
               class="form-control"
               placeholder="Username"
               required=""
@@ -38,6 +32,7 @@
           <div class="form-group">
             <input
               type="password"
+              name="admin_password"
               class="form-control"
               placeholder="Password"
               required=""
@@ -47,18 +42,11 @@
             로그인
           </button>
 
-          <a href="#"><small>Forgot password?</small></a>
-          <p class="text-muted text-center">
-            <small>Do not have an account?</small>
-          </p>
-          <a class="btn btn-sm btn-white btn-block" href="register.html"
-            >Create an account</a
-          >
+          <p class="text-muted text-center"></p>
         </form>
+
         <p class="m-t">
-          <small
-            >Inspinia we app framework base on Bootstrap 3 &copy; 2014</small
-          >
+          <small>관리자 사이트 방문을 환영합니다.&copy; 2024</small>
         </p>
       </div>
     </div>
@@ -67,5 +55,13 @@
     <script src="/js/jquery-3.1.1.min.js"></script>
     <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.js"></script>
+
+    <script>
+      var loginResultCode = "<%=resultMsg.code%>";
+
+      if (loginResultCode == 401 || loginResultCode == 402) {
+        alert("<%=resultMsg.msg%>");
+      }
+    </script>
   </body>
 </html>
