--- a/Backend/final/node-chat-app/views/chat.ejs
+++ b/Backend/final/node-chat-app/views/chat.ejs
@@ -16,7 +16,37 @@
       <li>ung: 안녕!</li>
     </ul>
 
-    <!-- 이 아래부분이 프론트엔드 코딩영역입니다. 웹브라우저에서 실행됩니다. -->
-    <script></script>
+    <!-- 클라이언트 코딩을 위한 jquery cdn 라이브러리 참조 -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <!-- socket.io javascript client library 참조 -->
+    <script src="/socket.io/socket.io.js"></script>
+
+    <!-- 프론트엔드 코딩영역입니다. 웹브라우저에서 실행됩니다. -->
+    <script>
+      // 클라이언트(웹브라우저) 서버 연결 소켓 객체 정의
+      // 서버소켓과 연결을 시도하고 연결이 완료되면 연결이 지속됩니다.
+      // io.connect("/")를 통해 서버소켓과 연결을 완료하고 서버로 메시지를 보낼 socket객체가 반환됩니다.
+      var socket = io.connect("/");
+
+      // jquery에서 html요소의 id값으로 html요소를 찾습니다. $("#html요소의id값")
+      // 전송버튼이 클릭되면 서버로 사용자 메시지를 전송합니다.
+      $("#btnSend").click(function () {
+        // 사용자 닉네임과 메시지 입력값을 추출합니다.
+        var nickName = $("#nickname").val();
+        var message = $("#message").val();
+        var msgData = `${nickName}: ${message}`;
+
+        // socket.emit("서버이벤트수신기명", 서버로보낼전송데이터);
+        socket.emit("broadcast", msgData);
+      });
+
+      // 서버에서 보내준 메시지를 수신하는 수신기 정의하기
+      // 클라이언트 이벤트 메시지 수신기 정의하기
+      socket.on("receiveAll", function (serverMsg) {
+        // 서버에서 보내준 메시지 문자열을 포함한 li태그를 하나 만들고 ul태그에 li태그를 추가(append())합니다.
+        $("#chatHistory").append(`<li>${serverMsg}</li>`);
+      });
+    </script>
   </body>
 </html>
