--- a/Backend/final/node-chat-app/views/chat.ejs
+++ b/Backend/final/node-chat-app/views/chat.ejs
@@ -12,9 +12,7 @@
     <button id="btnSend">전송</button>
 
     <!-- 채팅 수신 이력 표시 영역 -->
-    <ul id="chatHistory">
-      <li>ung: 안녕!</li>
-    </ul>
+    <ul id="chatHistory"></ul>
 
     <!-- 클라이언트 코딩을 위한 jquery cdn 라이브러리 참조 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
