--- a/Frontend/03-JSX/next-jsx-app/styles/globals.css
+++ b/Frontend/03-JSX/next-jsx-app/styles/globals.css
@@ -105,3 +105,14 @@ a {
     color-scheme: dark;
   }
 }
+
+/* 개발자 정의 클래스 */
+.sample2 {
+  background-color: white;
+  color: blue;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 10px;
+  border-radius: 10px;
+  margin: 10px;
+}
